--- a/pom.xml
+++ b/pom.xml
@@ -238,8 +238,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-snapshot</id>
-            <url>https://repo.spring.io/libs-snapshot</url>
+            <id>spring-libs-release</id>
+            <url>https://repo.spring.io/libs-release</url>
         </repository>
         <repository>
             <id>sonatype-snapshot</id>
