--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>2.6.0</version>
+        <version>2.6.1-SNAPSHOT</version>
     </parent>
 
     <properties>
         <couchbase>3.2.3</couchbase>
         <couchbase.osgi>3.2.3</couchbase.osgi>
-        <springdata.commons>2.6.0</springdata.commons>
+        <springdata.commons>2.6.1-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
     </properties>
 
@@ -217,8 +217,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-release</id>
-            <url>https://repo.spring.io/libs-release</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
         <repository>
             <id>sonatype-snapshot</id>
