--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.0.0-M1</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <properties>
         <couchbase>3.2.4</couchbase>
         <couchbase.osgi>3.2.4</couchbase.osgi>
-        <springdata.commons>3.0.0-M1</springdata.commons>
+        <springdata.commons>3.0.0-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
         <jodatime>2.10.13</jodatime>
         <jakarta.validation>3.0.1</jakarta.validation>
@@ -213,8 +213,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-milestone</id>
-            <url>https://repo.spring.io/libs-milestone</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
         <repository>
             <id>sonatype-snapshot</id>
