--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <version>${querydsl}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
