--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -2,7 +2,7 @@
 # If set to false, it is assumed that the host is managing the cluster and
 # as a result no containers or anything will be spun up.
 # Options: containerized, mocked, unmanaged
-cluster.type=mocked
+cluster.type=unmanaged
 # Default configs for both cases
 cluster.adminUsername=Administrator
 cluster.adminPassword=password
@@ -11,5 +11,5 @@ cluster.mocked.numNodes=1
 cluster.mocked.numReplicas=1
 # Entry point configuration if not managed
 # value of hostname and ns_server port
-cluster.unmanaged.seed=127.0.0.1:8091
+cluster.unmanaged.seed=10.144.220.101:8091
 cluster.unmanaged.numReplicas=0
