--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>2.7.0-RC1</version>
+        <version>2.7.0-SNAPSHOT</version>
     </parent>
 
     <properties>
         <couchbase>3.2.5</couchbase>
         <couchbase.osgi>3.2.5</couchbase.osgi>
-        <springdata.commons>2.7.0-RC1</springdata.commons>
+        <springdata.commons>2.7.0-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
         <apt>1.1.3</apt>
         <querydsl>5.0.0</querydsl>
@@ -228,8 +228,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-milestone</id>
-            <url>https://repo.spring.io/libs-milestone</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
         <repository>
             <id>sonatype-snapshot</id>
